--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/kaspernj/haya-date-picker/issues"
   },
-  "homepage": "https://github.com/kaspernj/haya-date-picker#readme"
+  "homepage": "https://github.com/kaspernj/haya-date-picker#readme",
+  "dependencies": {
+    "classnames": "^2.5.1",
+    "moment": "^2.30.1",
+    "prop-types": "^15.8.1",
+    "set-state-compare": "^1.0.46"
+  }
 }
