--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "haya-date-picker",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -21,5 +21,10 @@
     "moment": "^2.30.1",
     "prop-types": "^15.8.1",
     "set-state-compare": "^1.0.46"
+  },
+  "peerDependencies": {
+    "i18n-on-steroids": "*",
+    "react": "*",
+    "react-native": "*"
   }
 }
