--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/kaspernj/haya-date-picker#readme",
   "dependencies": {
     "classnames": "^2.5.1",
+    "eventemitter3": "^5.0.1",
     "moment": "^2.30.1",
     "prop-types": "^15.8.1",
     "set-state-compare": "^1.0.61",
