--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "moment": "^2.30.1",
     "prop-types": "^15.8.1",
     "set-state-compare": "^1.0.64",
-    "strftime": "^0.10.3"
+    "strftime": "^0.10.3",
+    "ya-use-event-emitter": "^0.1.2"
   },
   "peerDependencies": {
-    "@kaspernj/api-maker": ">= 1.0.2057",
     "react": "*",
     "react-native": "*"
   },
