--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "build": "rm -rf build && tsc -p tsconfig.json || true",
     "prepublishOnly": "npm run build",
+    "release:patch": "node scripts/release-patch.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "typecheck": "tsc --noEmit",
     "watch": "tsc -p tsconfig.json -w"
