Stabilize CI system tests and typecheck

--- a/peak_flow.yml
+++ b/peak_flow.yml
@@ -2,4 +2,4 @@ before_script:
   - npm install
 script:
   - npm run build
-  - npm run test:dist
+  - SYSTEM_TEST_HTTP_HOST=0.0.0.0 npm run test:dist
